--- a/package.json
+++ b/package.json
@@ -42,17 +42,16 @@
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
-		"@next/eslint-plugin-next": "^13.4.19",
 		"@tailwindcss/typography": "^0.5.10",
-		"@types/google.maps": "3.54.10",
-		"@types/lodash.uniqby": "4.7.9",
 		"@types/node": "20.5.2",
 		"@types/react": "^18.3.5",
 		"@types/react-dom": "^18.3.0",
 		"autoprefixer": "10.4.15",
-		"eslint": "^9.10.0",
+		"eslint": "^8",
+		"eslint-config-next": "^14.1.3",
 		"postcss": "^8.4.33",
 		"prettier": "^3.0.2",
+		"prettier-plugin-tailwindcss": "^0.5.7",
 		"tailwindcss": "3.3.3",
 		"typescript": "^5.2.2"
 	},
