--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,10 +23,11 @@
 		"allowJs": true,
 		"jsx": "preserve",
 		"paths": {
-			"~/*": ["./src/*"]
+			"~/*": ["./src/*"],
+			"markdown/*": ["./markdown/*"]
 		},
 		"forceConsistentCasingInFileNames": true
 	},
-	"include": ["src", "next-env.d.ts", ".next/types/**/*.ts"],
+	"include": ["src", "next-env.d.ts", ".next/types/**/*.ts", "markdown/instalment.mdx"],
 	"exclude": ["node_modules"]
 }
