add: markdown templates

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,7 @@
 		"allowJs": true,
 		"jsx": "preserve",
 		"paths": {
-			"~/*": ["./src/*"],
-			"markdown/*": ["./markdown/*"]
+			"~/*": ["./src/*"]
 		},
 		"forceConsistentCasingInFileNames": true
 	},
