--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
 		"react-dom": "^18.3.1",
 		"tailwind-merge": "^2.5.2",
 		"tailwind-variants": "^0.1.13",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"use-debounce": "^10.0.3"
 	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.10",
