--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "@excellent-soft/web",
 	"version": "0.1.0",
 	"scripts": {
-		"dev": "next dev",
+		"dev": "concurrently --kill-others \"next dev\" \"email dev --dir=./src/emails\"",
 		"build": "next build",
 		"start": "bun install serve -g && bunx serve out",
 		"lint": "next lint",
@@ -27,12 +27,15 @@
 		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-tabs": "^1.1.0",
+		"@react-email/components": "^0.0.25",
 		"@types/mdx": "^2.0.13",
 		"embla-carousel-react": "^8.2.1",
 		"next": "^14.2.11",
 		"react": "^18.3.1",
 		"react-cookie": "^7.2.0",
 		"react-dom": "^18.3.1",
+		"resend": "^4.0.0",
+		"sonner": "^1.5.0",
 		"tailwind-variants": "^0.1.13",
 		"tailwindcss-animate": "^1.0.7",
 		"use-debounce": "^10.0.3"
@@ -43,11 +46,13 @@
 		"@types/react": "^18.3.5",
 		"@types/react-dom": "^18.3.0",
 		"autoprefixer": "10.4.15",
+		"concurrently": "^9.0.1",
 		"eslint": "^8",
 		"eslint-config-next": "^14.1.3",
 		"postcss": "^8.4.33",
 		"prettier": "^3.0.2",
 		"prettier-plugin-tailwindcss": "^0.5.7",
+		"react-email": "^3.0.1",
 		"tailwindcss": "3.3.3",
 		"typescript": "^5.2.2"
 	},
