--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,10 @@ DOMAIN_URL=http://localhost:3000
 GOOGLE_VERIFICATION=
 YANDEX_VERIFICATION=
 FACEBOOK_VERIFICATION=
+
+HUB_SPOT_TITLE=
+HUB_SPOT_SUBJECT=
+HUB_SPOT_TO_EMAIL=
+HUB_SPOT_FROM_EMAIL=
+
+RESEND_API_TOKEN=
