--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "@excellent-soft/web",
 	"version": "0.1.0",
 	"scripts": {
-		"dev": "concurrently --kill-others \"next dev\" \"email dev --dir=./src/emails\"",
+		"dev": "concurrently --kill-others \"next dev\" \"email dev --port=3001 --dir=./src/emails\"",
 		"build": "next build",
 		"start": "bun install serve -g && bunx serve out",
 		"lint": "next lint",
