--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
 		"@react-email/components": "^0.0.25",
 		"@types/mdx": "^2.0.13",
 		"embla-carousel-react": "^8.2.1",
+		"gray-matter": "^4.0.3",
 		"next": "^14.2.11",
 		"react": "^18.3.1",
 		"react-cookie": "^7.2.0",
 		"react-dom": "^18.3.1",
 		"resend": "^4.0.0",
+		"server-only": "^0.0.1",
 		"sonner": "^1.5.0",
 		"tailwind-variants": "^0.1.13",
 		"tailwindcss-animate": "^1.0.7",
