--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"scripts": {
 		"dev": "concurrently --kill-others \"next dev\" \"email dev --port=3001 --dir=./src/emails\"",
 		"build": "next build",
-		"start": "bun install serve -g && bunx serve out",
+		"start": "next start",
 		"lint": "next lint",
 		"format": "prettier --write \"**/*.{js,jsx,ts,tsx,md}\"",
 		"test": "NODE_ENV=test jest",
