add: yandex metrica

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ DOMAIN_URL=http://localhost:3001
 GOOGLE_VERIFICATION=
 YANDEX_VERIFICATION=
 FACEBOOK_VERIFICATION=
+NEXT_PUBLIC_YANDEX_METRICA_ID=
 
 HUB_SPOT_TITLE=
 HUB_SPOT_SUBJECT=
