--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
 		"tailwindcss": "3.3.3",
 		"typescript": "^5.2.2"
 	},
-	"packageManager": "bun@1.1.7",
+	"packageManager": "pnpm@latest",
 	"engines": {
 		"node": ">=18.0.0 <=20.x.x"
 	}
